--- a/app/src/main/res/layout/activity_onboard01.xml
+++ b/app/src/main/res/layout/activity_onboard01.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#FFFFFF"
+    android:background="#FFFFFF"
     tools:context=".OnboardActivity01">
 
     <ImageView
@@ -12,16 +12,14 @@
         android:layout_width="268dp"
         android:layout_height="481dp"
         android:layout_marginStart="71dp"
-        android:layout_marginTop="85dp"
         android:layout_marginEnd="72dp"
-        android:layout_marginBottom="165dp"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.336"
         app:srcCompat="@drawable/on01" />
 
     <TextView
@@ -34,12 +32,12 @@
         android:text="Empower yourself to seize every moment with our &quot;My Manager&quot; app."
         android:textColor="#17265C"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.778" />
+        app:layout_constraintVertical_bias="0.742" />
 
     <Button
         android:id="@+id/button"
@@ -47,6 +45,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#A93FBC"
         android:text="Skip"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,10 +61,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#A93FBC"
         android:text="Next"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.436" />
+        app:layout_constraintVertical_bias="0.362" />
 </androidx.constraintlayout.widget.ConstraintLayout>
