--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,18 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="285dp"
-        android:layout_height="567dp"
-        android:layout_marginStart="63dp"
+        android:layout_width="185dp"
+        android:layout_height="368dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="63dp"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.381"
         app:srcCompat="@drawable/logo" />
 
     <TextView
@@ -28,7 +30,7 @@
         android:layout_marginStart="164dp"
         android:layout_marginEnd="165dp"
         android:text="Version 1.0"
-        android:textColor="#17265C"
+        android:textColor="#000A39"
         android:textSize="16sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
